--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="testimonial">
         <div class="container">
-            <div class="owl-carousel owl-theme animate__animated animate__fadeInUp">
+            <div class="owl-carousel owl-theme animate__animated animate__fadeInUp" aminate-delay="1s">
                 <div class="item">
                     <div class="img-thumb">
                         <img src="img/t2.jpg" alt="Rownok">
